Changelog
=========

1.0a3 - Unreleased
------------------


1.0a2 - 2009-11-18
------------------

- Fix packaging error
  [esteele]


1.0a1 - 2009-11-18
------------------

- Prevent discussion form buttons from displaying in print view. Add byline
  info for comments in print view.
  http://dev.plone.org/plone/ticket/8460
  [naro]
  
- Add CSS support for JQueryTools popup forms
  [stevem]

- Initial release